# kumo-bot

./: .gitignore  Cargo.toml  README.md
src/: api.rs  main.rs  utils.rs
src/handlers/: add.rs  back.rs  command_handler.rs  delete.rs  help.rs  id.rs  list.rs  mod.rs  next.rs  query_handler.rs  web.rs
src/model/: db.rs  file.rs  map_db.rs  mod.rs
