[package]
name = "kumo-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
frankenstein = { version = "0.21.0", features = ["async-http-client"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }

