[package]
name = "kumo-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
env_logger = "0.10.0"
frankenstein = { version = "0.21.0", features = ["async-http-client"] }
jsonwebtoken = "8.2.0"
log = "0.4.17"
reqwest = "0.11.13"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }

